samples/_failures_safe/1761545926_12ecb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_079e9431.c: In function ‘main’:
./samples/SAFE/__tmp_079e9431.c:149:16: error: missing terminating " character
  149 |         printf("Error: No log entries found
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_079e9431.c:149:9: error: expected expression at end of input
  149 |         printf("Error: No log entries found
      |         ^~~~~~
./samples/SAFE/__tmp_079e9431.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_079e9431.c:149:9: error: expected declaration or statement at end of input
